--- a/4.Spring/2.spring-ioc-container.md
+++ b/4.Spring/2.spring-ioc-container.md
@@ -2,3 +2,24 @@
 
 **控制反转**（*Inversion of Control，IoC*）是Spring框架最基础的概念，IoC一般也被称为**依赖注入**（*Dependency Injection，DI*）。
 
+在传统的Java开发中，比如有个类`A`用到了类`B`的对象`b`，一般来说，需要在`A`中显式地实例化`b`。
+
+```java
+class A {
+    B b;
+    A() {
+        b = new B(); // 需要显式的new出B的对象。
+    }
+}
+
+class B {}
+```
+
+有了IoC之后，在A只需要定义b，b的对象实例化及将b“注入”到A实例中的步骤，可以交由IoC框架（容器）来做，这个就叫控制反转。
+
+>  It is a process whereby objects define their dependencies (that is, the other objects they work with) only through constructor arguments, arguments to a factory method, or properties that are set on the object instance after it is constructed or returned from a factory method. The container then injects those dependencies when it creates the bean. This process is fundamentally the inverse (hence the name, Inversion of Control) of the bean itself controlling the instantiation or location of its dependencies by using direct construction of classes or a mechanism such as the Service Locator pattern.
+>
+> （控制反转）是一个过程，在这个过程中的对象，只需要定义它们的依赖项，比如通过构造函数参数、工厂方法参数或是对象自身的setter方法，容器会在创建bean时注入这些依赖。这个过程是**bean自己控制依赖的实例化**或是**服务定位器模式之类的机制控制的依赖的实例化**的**反转**（因而得名，控制反转）。
+
+
+
