spring ioc 之 容器

--- a/4.Spring/2.spring-ioc-container.md
+++ b/4.Spring/2.spring-ioc-container.md
@@ -1,5 +1,7 @@
 # Spring IoC 容器
 
+## 1 控制反转
+
 **控制反转**（*Inversion of Control，IoC*）是Spring框架最基础的概念，IoC一般也被称为**依赖注入**（*Dependency Injection，DI*）。
 
 在传统的Java开发中，比如有个类`A`用到了类`B`的对象`b`，一般来说，需要在`A`中显式地实例化`b`。
@@ -21,5 +23,13 @@ class B {}
 >
 > （控制反转）是一个过程，在这个过程中的对象，只需要定义它们的依赖项，比如通过构造函数参数、工厂方法参数或是对象自身的setter方法，容器会在创建bean时注入这些依赖。这个过程是**bean自己控制依赖的实例化**或是**服务定位器模式之类的机制控制的依赖的实例化**的**反转**（因而得名，控制反转）。
 
+## 2 容器
 
+`org.springframework.beans`包与`org.springframework.context`包是Spring IoC容器的基础，其中的[`BeanFactory`](https://docs.spring.io/spring-framework/docs/5.3.14/javadoc-api/org/springframework/beans/factory/BeanFactory.html)接口是所有IoC容器中最顶层的抽象，其定义了一些如根据名称获取bean、根据类型获取bean、是否包含某bean等容器的基础行为。
+
+![image-20211220174347212](assets/image-20211220174347212.png)
+
+[`ApplicationContext`](https://docs.spring.io/spring-framework/docs/5.3.14/javadoc-api/org/springframework/context/ApplicationContext.html)是`BeanFactory`的子接口，在其基础上增加了一些如AOP的支持、事件的发布和特定应用的上下文等。
+
+我们写的大多数应用都是与`ApplicationContext`打交道，`ApplicationContext`接口几乎代表了Spring IoC容器，它负责实例化、配置及组装bean。
 
