--- a/4.Spring/2.spring-ioc-container.md
+++ b/4.Spring/2.spring-ioc-container.md
@@ -1,5 +1,9 @@
 # Spring IoC 容器
 
+> In Spring, the objects that form the backbone of your application and that are managed by the Spring IoC container are called beans. A bean is an object that is instantiated, assembled, and managed by a Spring IoC container. Otherwise, a bean is simply one of many objects in your application. Beans, and the dependencies among them, are reflected in the configuration metadata used by a container.
+>
+> 在Spring中，若干对象互相构成了应用的骨架，这些对象由IoC容器所管理，被称之为bean。Bean均是由Spring IoC容器所实例化、组装并管理的对象，而非单单只是应用中的某个对象。Bean以及它们之间的相互依赖关系则反映在容器所使用的配置元数据之中。
+
 ## 1 控制反转
 
 **控制反转**（*Inversion of Control，IoC*）是Spring框架最基础的概念，IoC一般也被称为**依赖注入**（*Dependency Injection，DI*）。
@@ -31,5 +35,8 @@ class B {}
 
 [`ApplicationContext`](https://docs.spring.io/spring-framework/docs/5.3.14/javadoc-api/org/springframework/context/ApplicationContext.html)是`BeanFactory`的子接口，在其基础上增加了一些如AOP的支持、事件的发布和特定应用的上下文等。
 
-我们写的大多数应用都是与`ApplicationContext`打交道，`ApplicationContext`接口几乎代表了Spring IoC容器，它负责实例化、配置及组装bean。
+我们写的大多数应用都是与`ApplicationContext`打交道，`ApplicationContext`接口几乎代表了Spring IoC容器，它负责了bean的实例化、配置与组装。至于应当实例化哪些bean？bean与bean之间如何依赖、如何装配？容器可以通过读取配置的方式获取。这些配置可以是**XML文件**或是**Java注解**或直接是**Java代码**。
 
+### 2.1 基于XML方式的配置
+
+XML方式的上下文配置，是一种比较传统的，简单且直观的配置方式
