基于XML方式的上下文配置

--- a/4.Spring/2.spring-ioc-container.md
+++ b/4.Spring/2.spring-ioc-container.md
@@ -37,6 +37,32 @@ class B {}
 
 我们写的大多数应用都是与`ApplicationContext`打交道，`ApplicationContext`接口几乎代表了Spring IoC容器，它负责了bean的实例化、配置与组装。至于应当实例化哪些bean？bean与bean之间如何依赖、如何装配？容器可以通过读取配置的方式获取。这些配置可以是**XML文件**或是**Java注解**或直接是**Java代码**。
 
+不同形式的配置对应了`ApplicationContext`接口不同的具体实现。
+
 ### 2.1 基于XML方式的配置
 
-XML方式的上下文配置，是一种比较传统的，简单且直观的配置方式
+XML方式的上下文配置，是一种比较传统的，简单且直观的配置方式：
+
+```xml
+<?xml version="1.0" encoding="UTF-8"?>
+<beans xmlns="http://www.springframework.org/schema/beans"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://www.springframework.org/schema/beans
+        https://www.springframework.org/schema/beans/spring-beans.xsd">
+
+    <bean id="..." class="...">  
+        <!-- collaborators and configuration for this bean go here -->
+    </bean>
+
+    <bean id="..." class="...">
+        <!-- collaborators and configuration for this bean go here -->
+    </bean>
+
+    <!-- more bean definitions go here -->
+
+</beans>
+```
+
+XML方式的配置中的bean表现为<beans/>顶层标签内部的多个<bean/>标签。其`id`属性标识了一个独特的bean，是唯一的。其`class`属性定义了bean的类型，其使用的是对应的全限定类名。
+
+这里的`id`属性可以用作被依赖的bean的引用。
