--- a/4.Spring/2.spring-ioc-container.md
+++ b/4.Spring/2.spring-ioc-container.md
@@ -36,6 +36,20 @@ Bean是由Spring IoC容器所实例化、组装并管理的对象。容器加载
 - 指向当前bean所需要的其他bean的引用：依赖。
 - 新创建对象的一些其他配置设置：比如池的大小限制，或是管理连接池的bean中的连接数。
 
+这些bean的定义实际上由这些属性组成：
+
+|           属性           |        描述        |
+| :----------------------: | :----------------: |
+|          Class           |        类名        |
+|           Name           |  Bean的名称（id）  |
+|          Scope           |       作用域       |
+|  Constructor arguments   |    构造函数参数    |
+|        Properties        |        属性        |
+|     Autowiring mode      |    自动装配模式    |
+| Lazy initialization mode |     懒加载模式     |
+|  Initialization method   | 初始化（回调）方法 |
+|    Destruction method    |  销毁（回调）方法  |
+
 
 
 ## 2 容器
