--- a/4.Spring/2.spring-ioc-container.md
+++ b/4.Spring/2.spring-ioc-container.md
@@ -50,7 +50,9 @@ Bean是由Spring IoC容器所实例化、组装并管理的对象。容器加载
 |  Initialization method   | 初始化（回调）方法 |
 |    Destruction method    |  销毁（回调）方法  |
 
+除了这些bean的定义信息之外，`ApplicationContext` 的实现类还允许用户将一些在容器外创建的对象（用户自己创建）注册进来。这种方式是通过访问`ApplicationContext` 的`BeanFactory`来实现的。`getBeanFactory()`方法会返回`BeanFactory`的实现类`DefaultListableBeanFactory`，它的`registerSingleton(..)`和 `registerBeanDefinition(..)` 支持这种注册操作。不过还是推荐用常规的定义bean元数据的方法来定义bean。
 
+虽然Spring在一定程度上支持覆盖现有元数据和现有的单例，但是官方并不支持在运行时（runtime）注册新的bean（与`BeanFactory`的访问发生并发），这可能导致并发访问异常，且可有导致bean容器中出现不一致状态。
 
 ## 2 容器
 
