两种容器配置方式讨论

--- a/4.Spring/2.spring-ioc-container.md
+++ b/4.Spring/2.spring-ioc-container.md
@@ -237,9 +237,14 @@ public class AutoWiredBean {
 
 ```java
 @Autowired
-@Qualifier("the")
+@Qualifier("theSpecialBean3")
 public void setBean3(Bean3 bean3) {
     this.bean3 = bean3;
 }
 ```
 
+### 4.4 关于两种配置方式的讨论
+
+总有人说纯Java代码的配置更优于XML方式的配置，但是这种“命题”一般都不可能是绝对的。有人喜欢纯代码方式，注解带来开发的便利性，能够很方便地定义很多“上下文”，直接“植于”代码上的注解在开发时更简洁，更精确。喜欢XML方式的人觉得这种方式在不侵入代码的同时，能够实现组件的管理，而且加了注解的类均脱离了*POJO*的范畴，还有人觉得XML方式的配置更集中，更方便控制。
+
+当然这两种方式并不是“非A即B”，Spring支持两种方式的搭配使用。
