--- a/4.Spring/2.spring-ioc-container.md
+++ b/4.Spring/2.spring-ioc-container.md
@@ -21,7 +21,7 @@ class A {
 class B {}
 ```
 
-有了IoC之后，在A只需要定义b，b的对象实例化及将b“注入”到A实例中的步骤，可以交由IoC框架（容器）来做，这个就叫控制反转。
+有了IoC之后，在A中只需要定义属性b，*b的对象实例化及将b“注入”到A实例中*这个步骤，可以交由IoC框架（容器）来做，这个就叫控制反转。
 
 >  It is a process whereby objects define their dependencies (that is, the other objects they work with) only through constructor arguments, arguments to a factory method, or properties that are set on the object instance after it is constructed or returned from a factory method. The container then injects those dependencies when it creates the bean. This process is fundamentally the inverse (hence the name, Inversion of Control) of the bean itself controlling the instantiation or location of its dependencies by using direct construction of classes or a mechanism such as the Service Locator pattern.
 >
@@ -29,7 +29,11 @@ class B {}
 
 ## 2 Bean
 
-Bean是由Spring IoC容器所实例化、组装并管理的对象。容器加载配置，由配置元数据创建bean。在容器内部，bean的定义是以`BeanDefinition`对象的方式存在，这些对象会包含这些信息：
+Bean是由Spring IoC容器所实例化、组装并管理的对象。容器加载配置，由配置元数据创建bean。
+
+### 2.1 BeanDefinition
+
+在容器内部，bean的定义是以`BeanDefinition`对象的方式存在，这些对象会包含这些信息：
 
 - 一个包限定（package-qualified）类名：一般来说是定义了bean的实际的实现类。
 - Bean的行为配置元素：它阐明了这个bean在容器中的行为（比如作用域、生命周期回调等）。
@@ -54,6 +58,90 @@ Bean是由Spring IoC容器所实例化、组装并管理的对象。容器加载
 
 虽然Spring在一定程度上支持覆盖现有元数据和现有的单例，但是官方并不支持在运行时（runtime）注册新的bean（与`BeanFactory`的访问发生并发），这可能导致并发访问异常，且可有导致bean容器中出现不一致状态。
 
+### 2.2 Bean的实例化
+
+容器中的bean可以通过三种方式实例化：
+
+- 构造方法
+- 静态工厂方法
+- 实例工厂方法
+
+#### 2.2.1 构造方法
+
+bean配置的默认方式就是通过调用其类的构造方法来实例化该bean：
+
+```xml
+<!-- 无参构造函数 -->
+<bean id="exampleBean" class="examples.ExampleBean"/>
+
+<!-- 根据构造函数参数类型匹配 -->
+<bean id="exampleBean" class="examples.ExampleBean">
+    <constructor-arg type="int" value="7500000"/>
+    <constructor-arg type="java.lang.String" value="42"/>
+    <constructor-arg ref="bean1"/>
+</bean>
+
+<!-- 根据构造函数参数位置匹配 -->
+<bean id="exampleBean" class="examples.ExampleBean">
+    <constructor-arg index="0" value="7500000"/>
+    <constructor-arg index="1" value="42"/>
+</bean>
+
+<!-- 根据构造函数参数名称匹配 -->
+<bean id="exampleBean" class="examples.ExampleBean">
+    <constructor-arg name="years" value="7500000"/>
+    <constructor-arg name="ultimateAnswer" value="42"/>
+</bean>
+```
+
+#### 2.2.2 静态工厂方法
+
+容器可以调用静态工厂方法来创建bean实例：
+
+```xml
+<bean id="clientService" class="examples.ClientService" factory-method="createInstance"/>
+```
+
+其对应的工厂类：
+
+```java
+public class ClientService {
+    private static ClientService clientService = new ClientService();
+    private ClientService() {}
+
+    public static ClientService createInstance() {
+        return clientService;
+    }
+}
+```
+
+#### 2.2.3 实例工厂方法
+
+区别于静态工厂方法创建的实例，还支持通过实例方法来创建：
+
+```xml
+<!-- 工厂实例 -->
+<bean id="serviceLocator" class="examples.DefaultServiceLocator" />
+
+<!-- 通过实例工厂创建的bean -->
+<bean id="clientService" factory-bean="serviceLocator" factory-method="createClientServiceInstance"/>
+```
+
+对应的工厂实例类：
+
+```java
+public class DefaultServiceLocator {
+
+    private static ClientService clientService = new ClientServiceImpl();
+
+    public ClientService createClientServiceInstance() {
+        return clientService;
+    }
+}
+```
+
+
+
 ## 3 容器
 
 `org.springframework.beans`包与`org.springframework.context`包是Spring IoC容器的基础，其中的[`BeanFactory`](https://docs.spring.io/spring-framework/docs/5.3.14/javadoc-api/org/springframework/beans/factory/BeanFactory.html)接口是所有IoC容器中最顶层的抽象，其定义了一些如根据名称获取bean、根据类型获取bean、是否包含某bean等容器的基础行为。
@@ -67,11 +155,11 @@ Bean是由Spring IoC容器所实例化、组装并管理的对象。容器加载
 Spring提供了`ApplicationContext`接口不同的具体实现。比如：
 
 - `FileSystemXmlApplicationContext`：基于文件系统（磁盘中的文件）的XML配置上下文
-- `ClassPathXmlApplicationContext`：从classpath中拿XML配置的上下文
+- `ClassPathXmlApplicationContext`：从`classpath`中拿XML配置的上下文
 - `AnnotationConfigApplicationContext`：基于注解配置的上下文
 - 等...
 
-关于初始化启动容器可以通过：
+关于初始化启动容器，可以通过：
 
 ```java
 ApplicationContext context = new ClassPathXmlApplicationContext("application-context.xml");
