bean的生命周期

--- a/4.Spring/2.spring-ioc-container.md
+++ b/4.Spring/2.spring-ioc-container.md
@@ -140,7 +140,20 @@ public class DefaultServiceLocator {
 }
 ```
 
+### 2.3 Bean的作用域
 
+默认情况下，容器创建的bean都是单例的，但是实际场景中，有些bean并不是无状态的，这种bean就不适合“一骑打天下”。
+
+Bean的作用域控制了某个bean的定义能够创建的对象的范围。
+
+Spring定义了多个作用域：
+
+- `singleton` - 每个容器中单个bean的定义的范围只有单个对象实例。
+- `prototype` - 单个bean的定义的范围是任意数量的对象实例。
+- `request` - 在Spring Web上下文中，单个bean的定义的范围限定为单个http请求的生命周期。
+- `session` - 在Spring Web上下文中，单个bean的定义的范围限定为单个http会话的生命周期。
+- `application` - 在Spring Web上下文中，单个bean的定义的范围限定为一个`ServletContext`的生命周期。
+- `websocket` - 在Spring Web上下文中，单个bean的定义的范围限定为一个`WebSocket`的生命周期。
 
 ## 3 容器
 
