bean的生命周期

--- a/4.Spring/2.spring-ioc-container.md
+++ b/4.Spring/2.spring-ioc-container.md
@@ -150,10 +150,24 @@ Spring定义了多个作用域：
 
 - `singleton` - 每个容器中单个bean的定义的范围只有单个对象实例。
 - `prototype` - 单个bean的定义的范围是任意数量的对象实例。
-- `request` - 在Spring Web上下文中，单个bean的定义的范围限定为单个http请求的生命周期。
-- `session` - 在Spring Web上下文中，单个bean的定义的范围限定为单个http会话的生命周期。
-- `application` - 在Spring Web上下文中，单个bean的定义的范围限定为一个`ServletContext`的生命周期。
-- `websocket` - 在Spring Web上下文中，单个bean的定义的范围限定为一个`WebSocket`的生命周期。
+- `request` - 在Spring Web应用上下文中，单个bean的定义的范围限定为单个http请求的生命周期。
+- `session` - 在Spring Web应用上下文中，单个bean的定义的范围限定为单个http会话的生命周期。
+- `application` - 在Spring Web应用上下文中，单个bean的定义的范围限定为一个`ServletContext`的生命周期。
+- `websocket` - 在Spring Web应用上下文中，单个bean的定义的范围限定为一个`WebSocket`的生命周期。
+
+### 2.4 生命周期
+
+Spring Framework提供了一系列的接口，让开发者能够在bean的生命周期的各个节点能够执行自定义的逻辑，[官方文档](https://docs.spring.io/spring-framework/docs/current/reference/html/core.html#beans-factory-nature)将这些接口回调分为三类：
+
+- 生命周期回调
+- `ApplicationContextAware`与`BeanNameAware`通知回调
+- 其他Aware接口通知回调
+
+#### 2.4.1 生命周期回调
+
+
+
+
 
 ## 3 容器
 
