--- a/4.Spring/2.spring-ioc-container.md
+++ b/4.Spring/2.spring-ioc-container.md
@@ -165,7 +165,91 @@ Spring Framework提供了一系列的接口，让开发者能够在bean的生命
 
 #### 2.4.1 生命周期回调
 
+这个生命周期是指bean在容器中的生命周期，容器会在bean从创建到销毁期间的各个生命周期节点，对应调用对应接口的对应方法实现。
 
+##### 2.4.1.1 初始化回调 - `InitializingBean接口`
+
+`InitializingBean` 接口允许bean在容器完成设置其必要属性后，执行一些定制化的工作，对应调用的是`afterPropertiesSet()`方法。
+
+```java
+public class LifeCycleBean implements InitializingBean {
+    @Override
+    public void afterPropertiesSet() throws Exception {
+        // 在bean的属性注入完成后调用
+    }
+}
+```
+
+##### 2.4.1.2 Bean定义中的初始化方法
+
+在bean定义中，有属性指定bean的初始化方法。
+
+对于xml方式的配置：
+
+```xml
+<bean id="lifeCycleBean" class="ink.dri.LifeCycleBean" init-method="customInit"/>
+```
+
+对于Java代码方式的配置：
+
+```java
+@Bean(initMethod = "customInit")
+public LifeCycleBean getLifeCycleBean() {...}
+```
+
+在启动过程中容器会自动调用指定的`LifeCycleBean`中的`customInit`方法，这个方法必须得是无参的。
+
+##### 2.4.1.3 销毁回调 - `DisposableBean`接口
+
+实现了`DisposableBean`接口的bean，会在其对应容器销毁时得到一次通知，通知的方法是`destroy()`。
+
+```java
+public class LifeCycleBean implements DisposableBean {
+    @Override
+    public void destroy() throws Exception {
+        // 在容纳该bean的容器销毁时调用
+    }
+}
+```
+
+##### 2.4.1.4 Bean定义中的销毁方法
+
+与`init-method`一样，容器在销毁时也可以配置bean的销毁方法。
+
+xml方式的配置：
+
+```java
+<bean id="lifeCycleBean" class="ink.dri.LifeCycleBean" destroy-method="customDestroy"/>
+```
+
+Java代码方式的配置：
+
+```java
+@Bean(destroyMethod = "customDestroy")
+public LifeCycleBean getLifeCycleBean() {...}
+```
+
+同样的，`customDestroy`方法也得是无参的。
+
+##### 2.4.1.5 `@PostConstruct`注解与`@PreDestroy`注解
+
+`javax.annotation.PostConstruct`与`javax.annotation.PreDestroy`这俩注解是***JSR-250***的生命周期注解，分别对应bean的创建后与销毁前。
+
+```java
+public class LifeCycleBean {
+    @PostConstruct
+    public void afterBeanConstruct() {
+        // bean创建后
+    }
+    
+    @PreDestroy
+    public void beforeBeanDestroyed() {
+        // bean销毁前
+    }
+}
+```
+
+Spring支持了这俩注解的发现，**前提是必须开启`annotation-config`或者注解所在bean在自动发现范围内**。他俩分别对应Spring自己的`InitializingBean`与`DisposableBean`接口，但是对比这俩接口，官方更推荐使用***JSR-250***的生命周期注解，因为接口的方式多多少少使得代码耦合到Spring上。
 
 
 
@@ -314,7 +398,7 @@ Spring从两个方面实现自动化装配：
 </beans>
 ```
 
-也可以通过在配置类上加注解@ComponentScan的方式启动组件扫描：
+也可以通过在配置类上加注解`@ComponentScan`的方式启动组件扫描：
 
 ```java
 @Configuration
