--- a/4.Spring/2.spring-ioc-container.md
+++ b/4.Spring/2.spring-ioc-container.md
@@ -251,7 +251,35 @@ public class LifeCycleBean {
 
 Spring支持了这俩注解的发现，**前提是必须开启`annotation-config`或者注解所在bean在自动发现范围内**。他俩分别对应Spring自己的`InitializingBean`与`DisposableBean`接口，但是对比这俩接口，官方更推荐使用***JSR-250***的生命周期注解，因为接口的方式多多少少使得代码耦合到Spring上。
 
+##### 2.4.1.6 `LifeCycle`接口
 
+ `LifeCycle`接口定义了一个bean的基础的生命周期方法，比如启动、停止。
+
+```java
+public interface Lifecycle {
+
+    void start();
+
+    void stop();
+
+    boolean isRunning();
+}
+```
+
+当`ApplicationContext` 本身收到启动或停止的信号，它会将这些信号透传到`Lifecycle`的实现方法上。
+
+#### 2.4.2 `ApplicationContextAware`与`BeanNameAware`通知回调
+
+实现了`ApplicationContextAware`接口的bean会在其被创建完成后被通知回调，并被传入创建它的容器实例（`ApplicationContextAware`实例）。
+
+```java
+public interface ApplicationContextAware {
+
+    void setApplicationContext(ApplicationContext applicationContext) throws BeansException;
+}
+```
+
+这样的话，在bean中就可以针对容器实例做一些操作。
 
 ## 3 容器
 
