ApplicationContextAware与BeanNameAware通知回调

--- a/4.Spring/2.spring-ioc-container.md
+++ b/4.Spring/2.spring-ioc-container.md
@@ -274,12 +274,21 @@ public interface Lifecycle {
 
 ```java
 public interface ApplicationContextAware {
-
     void setApplicationContext(ApplicationContext applicationContext) throws BeansException;
 }
 ```
 
-这样的话，在bean中就可以针对容器实例做一些操作。
+这样的话，在bean中就可以针对容器实例做一些操作。比如有一个任务调度平台，平台定时向client端的发送http请求，传递beanName与方法签名，来实现定时调度（当然这种设计既不美观也不安全）。
+
+至于`BeanNameAware`接口：
+
+```java
+public interface BeanNameAware {
+    void setBeanName(String name) throws BeansException;
+}
+```
+
+这个接口的通知回调发生时机是在bean的普通属性填充之后，在初始化回调（`afterPropertiesSet()`或自定义`init-method`）之前。
 
 ## 3 容器
 
