spring容器的Aware通知回调接口

--- a/4.Spring/2.spring-ioc-container.md
+++ b/4.Spring/2.spring-ioc-container.md
@@ -290,6 +290,24 @@ public interface BeanNameAware {
 
 这个接口的通知回调发生时机是在bean的普通属性填充之后，在初始化回调（`afterPropertiesSet()`或自定义`init-method`）之前。
 
+#### 2.4.3 其他`Aware`通知回调
+
+除了`ApplicationContextAware`与`BeanNameAware`通知回调接口之外，Spring还支持了很多其他的`Aware`通知回调接口，这些接口均会向使用处注入一些容器相关或是bean相关的“基础依赖”，且接口的命名也直观地表达了具体注入的“依赖”的类型：
+
+|      |      |
+| ---- | ---- |
+|      |      |
+|      |      |
+|      |      |
+|      |      |
+|      |      |
+|      |      |
+|      |      |
+|      |      |
+|      |      |
+
+
+
 ## 3 容器
 
 `org.springframework.beans`包与`org.springframework.context`包是Spring IoC容器的基础，其中的[`BeanFactory`](https://docs.spring.io/spring-framework/docs/5.3.14/javadoc-api/org/springframework/beans/factory/BeanFactory.html)接口是所有IoC容器中最顶层的抽象，其定义了一些如根据名称获取bean、根据类型获取bean、是否包含某bean等容器的基础行为。
