spring容器的Aware通知回调接口

--- a/4.Spring/2.spring-ioc-container.md
+++ b/4.Spring/2.spring-ioc-container.md
@@ -294,17 +294,19 @@ public interface BeanNameAware {
 
 除了`ApplicationContextAware`与`BeanNameAware`通知回调接口之外，Spring还支持了很多其他的`Aware`通知回调接口，这些接口均会向使用处注入一些容器相关或是bean相关的“基础依赖”，且接口的命名也直观地表达了具体注入的“依赖”的类型：
 
-|      |      |
-| ---- | ---- |
-|      |      |
-|      |      |
-|      |      |
-|      |      |
-|      |      |
-|      |      |
-|      |      |
-|      |      |
-|      |      |
+| Aware接口名                    | 注入的依赖类型                                     |
+| ------------------------------ | -------------------------------------------------- |
+| ApplicationContextAware        | 上下文容器实例                                     |
+| ApplicationEventPublisherAware | 容器的事件发布者                                   |
+| BeanClassLoaderAware           | Bean的类加载器                                     |
+| BeanFactoryAware               | Bean工厂                                           |
+| BeanNameAware                  | Bean的名称                                         |
+| LoadTimeWeaverAware            | 加载期间类定义处理的weaver                         |
+| MessageSourceAware             | 用于解析消息的配置策略                             |
+| NotificationPublisherAware     | JMX通知发布者                                      |
+| ResourceLoaderAware            | 能在低层级访问资源的配置加载器                     |
+| ServletConfigAware             | 容器运行所在的当前 ServletConfig（只有Web上下文）  |
+| `ServletContextAware`          | 容器运行所在的当前 ServletContext（只有Web上下文） |
 
 
 
