--- a/4.Spring/2.spring-ioc-container.md
+++ b/4.Spring/2.spring-ioc-container.md
@@ -294,19 +294,19 @@ public interface BeanNameAware {
 
 除了`ApplicationContextAware`与`BeanNameAware`通知回调接口之外，Spring还支持了很多其他的`Aware`通知回调接口，这些接口均会向使用处注入一些容器相关或是bean相关的“基础依赖”，且接口的命名也直观地表达了具体注入的“依赖”的类型：
 
-| Aware接口名                    | 注入的依赖类型                                     |
-| ------------------------------ | -------------------------------------------------- |
-| ApplicationContextAware        | 上下文容器实例                                     |
-| ApplicationEventPublisherAware | 容器的事件发布者                                   |
-| BeanClassLoaderAware           | Bean的类加载器                                     |
-| BeanFactoryAware               | Bean工厂                                           |
-| BeanNameAware                  | Bean的名称                                         |
-| LoadTimeWeaverAware            | 加载期间类定义处理的weaver                         |
-| MessageSourceAware             | 用于解析消息的配置策略                             |
-| NotificationPublisherAware     | JMX通知发布者                                      |
-| ResourceLoaderAware            | 能在低层级访问资源的配置加载器                     |
-| ServletConfigAware             | 容器运行所在的当前 ServletConfig（只有Web上下文）  |
-| `ServletContextAware`          | 容器运行所在的当前 ServletContext（只有Web上下文） |
+| Aware接口名                      | 注入的依赖类型                                     |
+| -------------------------------- | -------------------------------------------------- |
+| `ApplicationContextAware`        | 上下文容器实例                                     |
+| `ApplicationEventPublisherAware` | 容器的事件发布者                                   |
+| `BeanClassLoaderAware`           | Bean的类加载器                                     |
+| `BeanFactoryAware`               | Bean工厂                                           |
+| `BeanNameAware`                  | Bean的名称                                         |
+| `LoadTimeWeaverAware`            | 加载期间类定义处理的weaver                         |
+| `MessageSourceAware`             | 用于解析消息的配置策略                             |
+| `NotificationPublisherAware`     | JMX通知发布者                                      |
+| `ResourceLoaderAware`            | 能在低层级访问资源的配置加载器                     |
+| `ServletConfigAware`             | 容器运行所在的当前 ServletConfig（只有Web上下文）  |
+| `ServletContextAware`            | 容器运行所在的当前 ServletContext（只有Web上下文） |
 
 
 
@@ -504,3 +504,14 @@ public void setBean3(Bean3 bean3) {
 总有人说纯Java代码的配置更优于XML方式的配置，但是这种“命题”一般都不可能是绝对的。有人喜欢纯代码方式，注解带来开发的便利性，能够很方便地定义很多“上下文”，直接“植于”代码上的注解在开发时更简洁，更精确。喜欢XML方式的人觉得这种方式在不侵入代码的同时，能够实现组件的管理，而且加了注解的类均脱离了*POJO*的范畴，还有人觉得XML方式的配置更集中，更方便控制。
 
 当然这两种方式并不是“非A即B”，Spring支持两种方式的搭配使用。
+
+## 5 `Environment`接口
+
+`Environment`接口是集成载容器中的**一个对应用程序运行环境的抽象**，它描述了两个关键模型：**profiles**和**properties**。
+
+这玩意有点类似maven中的profile，用于应用程序在不同环境中的不同行为，比如测试环境和生产环境。
+
+
+
+
+
