--- a/4.Spring/2.spring-ioc-container.md
+++ b/4.Spring/2.spring-ioc-container.md
@@ -511,7 +511,13 @@ public void setBean3(Bean3 bean3) {
 
 这玩意有点类似maven中的profile，用于应用程序在不同环境中的不同行为，比如测试环境和生产环境。
 
+## 6 容器扩展点
 
+一般来说，如果你需要一个自定义的容器来满足特定的需求，不用去实现一个`ApplicationContext`，Spring提供了一些扩展的功能，支持开发者以一种“插件”的形式，来实现容器的定制化的功能。
+
+### 6.1 使用`BeanPostProcessor`来自定义bean
+
+`BeanPostProcessor`接口定义了一些回调方法，你可以通过实现这些方法来定义自己的实例化逻辑、依赖解析逻辑等等。如果要在 Spring 容器在处理bean的过程中的一些节点，比如在完成对 bean 的实例化、配置和初始化之后实现一些自定义逻辑，你可以插入一个或多个自定义 `BeanPostProcessor` 实现。
 
 
 
